--- a/proj-html-vuejs/src/assets/style/_global.scss
+++ b/proj-html-vuejs/src/assets/style/_global.scss
@@ -1,5 +1,10 @@
 @import '~bootstrap/scss/bootstrap.scss';
 
 *{
-    box-sizing: border-box;
+    box-sizing: border-box !important;
+    border: 1px solid red;
+}
+
+a{
+    text-decoration: none;
 }
