--- a/proj-html-vuejs/src/assets/style/_vars.scss
+++ b/proj-html-vuejs/src/assets/style/_vars.scss
@@ -6,3 +6,7 @@ $bg-dark-2: #333333;
 $bg-lightgrey: #e5e5ea;
 $bg-dark-3: #4c4c4c;
 $bg-dark-4: #191919;
+
+// Text Colors
+$txt-blue: rgb(28, 176, 215);
+$txt-red: rgb(249, 99, 107);
