--- a/proj-html-vuejs/src/assets/style/_global.scss
+++ b/proj-html-vuejs/src/assets/style/_global.scss
@@ -3,6 +3,7 @@
 *{
     box-sizing: border-box !important;
     border: 1px solid red;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 a{
