--- a/proj-html-vuejs/src/assets/style/_vars.scss
+++ b/proj-html-vuejs/src/assets/style/_vars.scss
@@ -11,6 +11,7 @@ $bg-dark-4: #191919;
 $txt-blue: rgb(28, 176, 215);
 $txt-red: rgb(249, 99, 107);
 $txt-grey: rgb(127, 127, 127);
+$txt-grey-2: rgb(136, 136, 136);
 
 // Others
 $magenta: rgb(182, 36, 110);
