--- a/proj-html-vuejs/src/assets/style/_vars.scss
+++ b/proj-html-vuejs/src/assets/style/_vars.scss
@@ -15,3 +15,5 @@ $txt-grey-2: rgb(136, 136, 136);
 
 // Others
 $magenta: rgb(182, 36, 110);
+$dark-blue: rgb(11, 24, 82);
+$dark-blue-2: rgb(2, 2, 48);
