Aggiunti tutti i bottoni tramite apposito Componente

--- a/proj-html-vuejs/src/assets/style/_vars.scss
+++ b/proj-html-vuejs/src/assets/style/_vars.scss
@@ -17,3 +17,6 @@ $txt-grey-2: rgb(136, 136, 136);
 $magenta: rgb(182, 36, 110);
 $dark-blue: rgb(11, 24, 82);
 $dark-blue-2: rgb(2, 2, 48);
+
+$btn-blue-1: rgb(3, 166, 210);
+$btn-blue-2: rgb(31, 63, 131);
